--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Virtual environment
+venv/
+
+# models
+*.pth
+
+# Uploaded or downloaded videos
+*.mp4
+*.mov
+*.avi
+*.mkv
+
+# Extracted audio files
+*.wav
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
